// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Theme: type= basic, closable=false shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #666666;
  border: 1px solid #cccccc;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="basic"
      />
    </div>
  </span>
</span>
`;

exports[`Tag Theme: type= basic, shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #666666;
  border: 1px solid #cccccc;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="basic"
      />
    </div>
  </span>
</span>
`;

exports[`Tag Theme: type= customs, closable=false shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #fff;
  background: #4d63ff;
  border: 1px solid #4d63ff;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="customs"
      />
    </div>
  </span>
</span>
`;

exports[`Tag Theme: type= customs, shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #fff;
  background: #4d63ff;
  border: 1px solid #4d63ff;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="customs"
      />
    </div>
  </span>
</span>
`;

exports[`Tag Theme: type= presets, closable=false shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #f22735;
  background: rgba(242,39,53,0.05);
  border: 1px solid #f22735;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="presets"
      />
    </div>
  </span>
</span>
`;

exports[`Tag Theme: type= presets, shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #f22735;
  background: rgba(242,39,53,0.05);
  border: 1px solid #f22735;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="presets"
      />
    </div>
  </span>
</span>
`;

exports[`Tag Theme: type= primary, closable=false shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #666666;
  background: #e8e8e8;
  border: 1px solid #e8e8e8;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="primary"
      />
    </div>
  </span>
</span>
`;

exports[`Tag Theme: type= primary, shape= round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #666666;
  background: #e8e8e8;
  border: 1px solid #e8e8e8;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="primary"
      />
    </div>
  </span>
</span>
`;

exports[`Tag default: type = basic 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 0.4rem;
  color: #666666;
  border: 1px solid #cccccc;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="basic"
      />
    </div>
  </span>
</span>
`;

exports[`Tag default: type = basic, shape = round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #666666;
  border: 1px solid #cccccc;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="basic"
      />
    </div>
  </span>
</span>
`;

exports[`Tag default: type = customs 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 0.4rem;
  color: #fff;
  background: #4d63ff;
  border: 1px solid #4d63ff;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="customs"
      />
    </div>
  </span>
</span>
`;

exports[`Tag default: type = customs, shape = round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #fff;
  background: #4d63ff;
  border: 1px solid #4d63ff;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="customs"
      />
    </div>
  </span>
</span>
`;

exports[`Tag default: type = presets 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 0.4rem;
  color: #f22735;
  background: rgba(242,39,53,0.05);
  border: 1px solid #f22735;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="presets"
      />
    </div>
  </span>
</span>
`;

exports[`Tag default: type = presets, shape = round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #f22735;
  background: rgba(242,39,53,0.05);
  border: 1px solid #f22735;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="presets"
      />
    </div>
  </span>
</span>
`;

exports[`Tag default: type = primary 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 0.4rem;
  color: #666666;
  background: #e8e8e8;
  border: 1px solid #e8e8e8;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="primary"
      />
    </div>
  </span>
</span>
`;

exports[`Tag default: type = primary, shape = round 1`] = `
.c0 {
  display: inline-block;
  height: 2rem;
  border-radius: 0.4rem;
  font-size: 1.2rem;
  cursor: pointer;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-align: center;
  vertical-align: top;
  -webkit-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
  border-radius: 2rem;
  color: #666666;
  background: #e8e8e8;
  border: 1px solid #e8e8e8;
  line-height: 1.8rem;
  padding: 0 0.8rem;
  opacity: 1;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c1 {
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin: 0;
  vertical-align: top;
}

<span
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
>
  <span
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c0"
      onClick={[Function]}
      style={Object {}}
    >
      <span
        className="c1"
        style={Object {}}
        type="primary"
      />
    </div>
  </span>
</span>
`;
